suite de mon projet

--- a/views/home/accueil.ejs
+++ b/views/home/accueil.ejs
@@ -21,8 +21,8 @@
        </div>
     </div>
     
-    <div class="img--container">
+    <!-- <div class="img--container">
         <img src="images/img1.jpg" alt="first">
-    </div>
+    </div> -->
 </body>
 </html>
