--- a/public/css/_general.scss
+++ b/public/css/_general.scss
@@ -4,29 +4,34 @@
 
 
 #accueil {
-    background-color:cornflowerblue
+    background-color:black;
+   color: aliceblue;
+    
 
 }
 div h1 {
     font-size:large;
-    color:darkblue;
+    color:white;
+    background-color: black;
     font-weight: bold;
     font-size: 30px;
     
 }
 
 
-.img--container {
-    width: 400px;
-    height: 200px;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
+// .img--container {
+//     width: 1000px;
+//     height: 900px;
+//         img {
+//             width: 100%;
+//             height: 100%;
+//             object-fit: cover;
+            
+//         }
+// }
 
 #nav {
+    background-color: black;
     font-style:normal;
     font-size: 18px;
     font-weight: bold;
@@ -40,7 +45,7 @@ a {
     text-decoration: none;
 
 }
-div.header {
-    border-radius: 5px;
+// div.header {
+//     border-radius: 5px;
   
-}
+// }
