--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,18 @@
 #accueil {
-  background-color: cornflowerblue;
+  background-color: black;
+  color: aliceblue;
 }
 
 div h1 {
   font-size: large;
-  color: darkblue;
+  color: white;
+  background-color: black;
   font-weight: bold;
   font-size: 30px;
 }
 
-.img--container {
-  width: 400px;
-  height: 200px;
-}
-
-.img--container img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 #nav {
+  background-color: black;
   font-style: normal;
   font-size: 18px;
   font-weight: bold;
@@ -32,9 +23,5 @@ div h1 {
 a {
   color: blanchedalmond;
   text-decoration: none;
-}
-
-div.header {
-  border-radius: 5px;
 }
 /*# sourceMappingURL=style.css.map */
