--- a/views/home/product.ejs
+++ b/views/home/product.ejs
@@ -1,6 +1,4 @@
 <%- include('../../partials/_header.ejs') %>
 
-<h1>Que du bonheur ☺ </h1>
-<!-- <img src="images/img13.png" alt="Hello world"> -->
-
+<p><%=findID.id %></p>
 <%- include('../../partials/_footer.ejs') %>
