--- a/views/home/contact.ejs
+++ b/views/home/contact.ejs
@@ -14,9 +14,9 @@
     <form method="post" enctype="multipart/form-data">
         <div>
             <label for="firstname">firstname</label>
-            <input type="text" id="firstname" name="firstname">
+            <input type="text" name="firstname">
             <label for="lastname">Lastname</label>
-            <input type="text" id="lastname" name="lastname">
+            <input type="text" name="lastname">
         </div> 
         <br>
         <div>
@@ -29,7 +29,7 @@
             <input type="message" id="message" name="message">
         </div>
         <div>
-            <input type="file" id="myFile" name="myFile">
+            <input type="file"  name="myFile">
         </div>
         <br>
         <div>
